Prevent overlap

--- a/src/media/css/focalpoint.css
+++ b/src/media/css/focalpoint.css
@@ -272,7 +272,6 @@
 
 #fp_locationlist {
   width: 100%;
-  height: 0;
   min-height: 1px;
   overflow: hidden;
   transition: all 0.5s ease;
